--- a/taller1_corte1_mi_20241.ipynb
+++ b/taller1_corte1_mi_20241.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPA+OvpzEclVXjv4R8IdMmw",
+      "authorship_tag": "ABX9TyPiHb2bD4pgulk9YIvaDgEs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,12 +53,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Y09becwgCjnm"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **CARGUE Y LECTURA DEL ARCHIVO CSV**\n",
+        "En esta sección del código se carga los datos del archivo CSV en un objeto llamado data_frame"
+      ],
+      "metadata": {
+        "id": "FA2I_H5FHYnI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_frame = pd.read_csv('/content/Colombianos_registrados_en_el_exterior.csv')"
+      ],
+      "metadata": {
+        "id": "d3HD2lI3HqsX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
