--- a/taller1_corte1_mi_20241.ipynb
+++ b/taller1_corte1_mi_20241.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPiHb2bD4pgulk9YIvaDgEs",
+      "toc_visible": true,
+      "mount_file_id": "1PETWeF3zmWYsaSMUDTXC0wk70aNeY5fu",
+      "authorship_tag": "ABX9TyOtnLayqVhF0VM2kLE9gku9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +46,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## **REFERENCIA DEL DATASET**\n",
+        "https://www.datos.gov.co/Estad-sticas-Nacionales/Colombianos-registrados-en-el-exterior/y399-rzwf/about_data"
+      ],
+      "metadata": {
+        "id": "Sh9yck3oN60Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## **IMPORTACIÓN DE LIBRERIAS**\n",
         "En esta sección del código se realizan las importaciones correspondientes a cada librería que permitiran la realización exitosa de la lectura y el tratamiento de los datos del archivo \".csv\"."
       ],
@@ -77,13 +89,67 @@
     {
       "cell_type": "code",
       "source": [
-        "data_frame = pd.read_csv('/content/Colombianos_registrados_en_el_exterior.csv')"
+        "data_frame = pd.read_csv('files/Colombianos_registrados_en_el_exterior_20240221.csv')"
       ],
       "metadata": {
         "id": "d3HD2lI3HqsX"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **DATA FRAME DEL ARCHIVO CSV**\n",
+        "\n",
+        "La función data_frame.info() en Pandas proporciona un resumen conciso de la estructura y la información básica sobre el DataFrame cargado. RangeIndex: 739595 entries, 0 to 739594: Indica que el DataFrame tiene un índice que va desde 0 hasta 739594, y contiene un total de 739595 filas (entradas)."
+      ],
+      "metadata": {
+        "id": "lxDcxILhMCRp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_frame.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HqMifW3uM8GK",
+        "outputId": "5a02c2ea-ef97-43e9-8cfa-abe4b5c761cc"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 739595 entries, 0 to 739594\n",
+            "Data columns (total 14 columns):\n",
+            " #   Column                 Non-Null Count   Dtype \n",
+            "---  ------                 --------------   ----- \n",
+            " 0   País                   739595 non-null  object\n",
+            " 1   Código ISO país        739595 non-null  object\n",
+            " 2   Oficina de registro    739595 non-null  object\n",
+            " 3   Grupo edad             739595 non-null  object\n",
+            " 4   Edad (años)            739595 non-null  int64 \n",
+            " 5   Área Conocimiento      739595 non-null  object\n",
+            " 6   Sub Area Conocimiento  739595 non-null  object\n",
+            " 7   Nivel Académico        739595 non-null  object\n",
+            " 8   Estado civil           739595 non-null  object\n",
+            " 9   Género                 739595 non-null  object\n",
+            " 10  Etnia de la persona    739595 non-null  object\n",
+            " 11  Estatura (CM)          739595 non-null  int64 \n",
+            " 12  Localización           739595 non-null  object\n",
+            " 13  Cantidad de personas   739595 non-null  int64 \n",
+            "dtypes: int64(3), object(11)\n",
+            "memory usage: 79.0+ MB\n"
+          ]
+        }
+      ]
     }
   ]
 }
