--- a/taller1_corte1_mi_20241.ipynb
+++ b/taller1_corte1_mi_20241.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1PETWeF3zmWYsaSMUDTXC0wk70aNeY5fu",
-      "authorship_tag": "ABX9TyOtnLayqVhF0VM2kLE9gku9",
+      "authorship_tag": "ABX9TyNBNI5/4dYII4jiIvLBMuAH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,13 @@
       "source": [
         "## **DATA FRAME DEL ARCHIVO CSV**\n",
         "\n",
-        "La función data_frame.info() en Pandas proporciona un resumen conciso de la estructura y la información básica sobre el DataFrame cargado. RangeIndex: 739595 entries, 0 to 739594: Indica que el DataFrame tiene un índice que va desde 0 hasta 739594, y contiene un total de 739595 filas (entradas)."
+        "La función **data_frame.info()** en Pandas proporciona un resumen conciso de la estructura y la información básica sobre el DataFrame cargado. RangeIndex: 739595 entries, 0 to 739594: Indica que el DataFrame tiene un índice que va desde 0 hasta 739594, y contiene un total de 739595 filas (entradas).\n",
+        "\n",
+        "**Data columns (total 14 columns):** Indica que hay un total de 14 columnas en el DataFrame.\n",
+        "\n",
+        "**Column:** Lista los nombres de las columnas.\n",
+        "\n",
+        "**Non-Null Count:** Muestra el número de valores no nulos en cada columna, lo que indica cuántos valores válidos hay en cada columna. En este caso, todas las columnas tienen 739595 valores no nulos, lo que significa que no hay valores faltantes en ninguna columna."
       ],
       "metadata": {
         "id": "lxDcxILhMCRp"
