--- a/taller1_corte1_mi_20241.ipynb
+++ b/taller1_corte1_mi_20241.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1PETWeF3zmWYsaSMUDTXC0wk70aNeY5fu",
-      "authorship_tag": "ABX9TyNBNI5/4dYII4jiIvLBMuAH",
+      "authorship_tag": "ABX9TyNEPVSMQWOyy8iXGX0VYBDU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "\n",
         "### PRESENTADO POR:\n",
         "\n",
-        "##### ALEXANDER BELEÑO MACKENZIE, VANESSA, JHON\n"
+        "### ALEXANDER BELEÑO MACKENZIE, VANESSA, JHON\n"
       ],
       "metadata": {
         "id": "aote-4ApClK1"
