--- a/taller1_corte1_mi_20241.ipynb
+++ b/taller1_corte1_mi_20241.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1PETWeF3zmWYsaSMUDTXC0wk70aNeY5fu",
-      "authorship_tag": "ABX9TyNEPVSMQWOyy8iXGX0VYBDU",
+      "authorship_tag": "ABX9TyM6QUK12rnPeWbLh6i2E4cC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,6 +41,19 @@
       ],
       "metadata": {
         "id": "aote-4ApClK1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **INFORMACIÓN RELACIONADA AL DATASET**\n",
+        "\n",
+        "La información sobre la población colombiana residente y registrada en las diversas misiones consulares en el exterior proporciona un panorama detallado y crucial para comprender la diáspora colombiana y sus características demográficas. Esta data abarca una variedad de aspectos, desde el género y la edad hasta el nivel educativo, la ocupación y el lugar de residencia de los ciudadanos colombianos en el extranjero. Tal información no solo permite a las autoridades consulares entender las necesidades específicas de sus ciudadanos en el exterior, sino que también facilita la implementación de políticas y programas destinados a brindarles apoyo y protección. Además, el conocimiento del consulado de la circunscripción que atiende a cada individuo contribuye a una gestión más efectiva de los servicios consulares y a una mejor atención personalizada a los colombianos en el extranjero.\n",
+        "\n",
+        "Esta recopilación exhaustiva de datos no solo ayuda a trazar perfiles demográficos precisos de la población colombiana en el exterior, sino que también ofrece una visión más amplia de la diáspora y sus contribuciones a nivel global. El conocimiento detallado sobre la distribución por género, edad, nivel educativo y ocupación permite identificar tendencias migratorias y patrones socioeconómicos, lo que a su vez puede informar políticas públicas tanto en Colombia como en los países de acogida. Además, esta información puede ser valiosa para el diseño de programas de integración y desarrollo que beneficien tanto a los colombianos en el exterior como a sus comunidades de origen. En resumen, la compilación y análisis de datos sobre la población colombiana en el exterior desempeña un papel fundamental en la formulación de estrategias para fortalecer los lazos entre la diáspora y su país de origen, promoviendo así un mayor desarrollo y bienestar para todos los involucrados."
+      ],
+      "metadata": {
+        "id": "0ajMSwcKSKP5"
       }
     },
     {
