--- a/taller1_corte1_mi_20241.ipynb
+++ b/taller1_corte1_mi_20241.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1PETWeF3zmWYsaSMUDTXC0wk70aNeY5fu",
-      "authorship_tag": "ABX9TyP+q/TcTV9nfP6mE5NAPQUJ",
+      "authorship_tag": "ABX9TyNkSawNy9NS4ydssBXMywnO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Y09becwgCjnm"
       },
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "d3HD2lI3HqsX"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
         "id": "HqMifW3uM8GK",
         "outputId": "97bd3b55-4027-4413-c2f3-0ced52742865"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
         "id": "2PxpMOpJ4bgV",
         "outputId": "1c0541f6-2360-4013-a93a-1d00fe4cdf35"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +600,7 @@
         "id": "0YcE8gWM6ZRP",
         "outputId": "9bb8152e-40b4-40a0-96bc-3dec488cd181"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1011,7 +1011,7 @@
         "id": "Em6ACPOj7PGj",
         "outputId": "620e7353-c605-4910-c64e-61806f018539"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1382,6 +1382,221 @@
           },
           "metadata": {},
           "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **3 CAMPOS DE VARIABLE CUANTITATIVA**\n",
+        "\n",
+        "PARA LOS SIGUIENTES CAMPOS:\n",
+        "1.   Edad (años).\n",
+        "2.   Estatura (CM).\n",
+        "3.   Cantidad de personas.\n",
+        "\n",
+        "SE REALIZA:\n",
+        "1.   Media\n",
+        "2.   Moda\n",
+        "3.   Mediana\n",
+        "4.   Máximo\n",
+        "5.   Mínimo\n",
+        "6.   Caja de bigote\n",
+        "7.   Histograma"
+      ],
+      "metadata": {
+        "id": "CLpXAN3A9xhc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **MEDIA**\n",
+        "\n",
+        "La media aritmética se define como la suma de N elementos dividida entre N. Se trata una medida bastante conocida entre la gente, aunque tiene el inconveniente de que es muy susceptible a valores extremos. En pandas, el método que funciona para obtener el promedio o la media es mean()."
+      ],
+      "metadata": {
+        "id": "9EFkF10iGPn2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "promedio = data_frame.loc[:100000, ['Edad (años)', 'Estatura (CM)', 'Cantidad de personas']].mean()\n",
+        "print(\"Promedio por columna:\\n\", promedio)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sq57dKUgOH0R",
+        "outputId": "27418f99-a4b4-49ee-f2ba-af0001c411ec"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Promedio por columna:\n",
+            " Edad (años)             46.404666\n",
+            "Estatura (CM)           78.679913\n",
+            "Cantidad de personas     1.083359\n",
+            "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **MODA**\n",
+        "\n",
+        "En Pandas, el método mode() se utiliza para calcular la moda de un DataFrame o de una Serie. La moda representa el valor que aparece con mayor frecuencia en un conjunto de datos.\n",
+        "\n",
+        "Cuando aplicas mode() a un DataFrame, el método devuelve un nuevo DataFrame que contiene las modas de cada columna. Si hay varios valores que son igualmente frecuentes y son la moda, mode() devolverá todos esos valores."
+      ],
+      "metadata": {
+        "id": "b-hFHwCYdxRJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "moda = data_frame.loc[:100000, ['Edad (años)', 'Estatura (CM)', 'Cantidad de personas']].mode()\n",
+        "print(\"Moda por columna:\\n\", moda)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ugp5Rjh2eWYx",
+        "outputId": "ced14e1d-c069-4608-c333-fbbfdbb20580"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Moda por columna:\n",
+            "    Edad (años)  Estatura (CM)  Cantidad de personas\n",
+            "0           41             -1                     1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **MEDIANA**\n",
+        "La mediana es el valor que dentro del conjunto de datos es menor que el 50% de los datos y mayor que el 50% restante. En pandas, el método que funciona para obtener el promedio o la media es **median()**."
+      ],
+      "metadata": {
+        "id": "QcBE3nT8e0DD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mediana = data_frame.loc[:100000, ['Edad (años)', 'Estatura (CM)', 'Cantidad de personas']].median()\n",
+        "print(\"Mediana por columna:\\n\", mediana)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t7f16YDUfrMp",
+        "outputId": "4eeefd18-21c4-4169-fbb7-47c7655c4619"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mediana por columna:\n",
+            " Edad (años)             45.0\n",
+            "Estatura (CM)           -1.0\n",
+            "Cantidad de personas     1.0\n",
+            "dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **MÁXIMO**\n",
+        "El método **max()** en Pandas se utiliza para calcular el valor máximo en una columna o en todo el DataFrame, dependiendo de cómo se utilice.\n"
+      ],
+      "metadata": {
+        "id": "A4nDUiHXgGEr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max_value = data_frame.loc[:100000, ['Edad (años)', 'Estatura (CM)', 'Cantidad de personas']].max()\n",
+        "print(\"Máximo valor por columna:\\n\", max_value)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QGV5YiUJtjIr",
+        "outputId": "468a8807-4e7c-442c-b063-aba4fe616f9c"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Máximo valor por columna:\n",
+            " Edad (años)                131\n",
+            "Estatura (CM)           163163\n",
+            "Cantidad de personas        17\n",
+            "dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **MINIMO**\n",
+        "El método min() en Pandas se utiliza para calcular el valor mínimo en una columna o en todo el DataFrame, similar al método max()."
+      ],
+      "metadata": {
+        "id": "JKKmGvvEt8Rw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "min_value = data_frame.loc[:100000, ['Edad (años)', 'Estatura (CM)', 'Cantidad de personas']].min()\n",
+        "print(\"Minimo valor por columna:\\n\", min_value)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9CdUVuqUt8rL",
+        "outputId": "ea3ac1ca-2b8e-47bf-a432-53c45a1556cd"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Minimo valor por columna:\n",
+            " Edad (años)            -1\n",
+            "Estatura (CM)          -1\n",
+            "Cantidad de personas    1\n",
+            "dtype: int64\n"
+          ]
         }
       ]
     }
