--- a/taller1_corte1_mi_20241.ipynb
+++ b/taller1_corte1_mi_20241.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1PETWeF3zmWYsaSMUDTXC0wk70aNeY5fu",
-      "authorship_tag": "ABX9TyMLXf04RSQZHZDQzrgaolWi",
+      "authorship_tag": "ABX9TyPFnq/BuFTQmZTn9OuudpPt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1951,7 +1951,32 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Partes del diagrama:\n",
+        "\n",
+        "Caja: Representa el rango intercuartílico (IQR), que abarca el 50% de los datos. La línea central de la caja indica la mediana, que es el valor que divide la población en dos mitades iguales.\n",
+        "\n",
+        "Bigotes: Se extienden desde la caja hasta los valores máximo y mínimo, excluyendo los valores atípicos.\n",
+        "\n",
+        "Valores atípicos: Se representan como puntos individuales fuera de los bigotes.\n",
+        "\n",
+        "Interpretación:\n",
+        "\n",
+        "La mediana de edad es de 30 años.\n",
+        "\n",
+        "El 50% de la población tiene entre 20 y 40 años.\n",
+        "\n",
+        "El 75% de la población tiene entre 15 y 50 años.\n",
+        "\n",
+        "El rango de edad abarca desde 5 años hasta 80 años.\n",
+        "\n",
+        "Hay dos valores atípicos, uno por encima de 80 años y otro por debajo de 5 años.\n",
+        "\n",
+        "Conclusiones:\n",
+        "La población representada en el diagrama de caja y bigotes tiene una edad media.\n",
+        "La mayoría de la población se encuentra en el rango de edad típico de adultos.\n",
+        "Hay una pequeña cantidad de personas que son muy jóvenes o muy mayores."
+      ],
       "metadata": {
         "id": "HJlHLjKLnGCZ"
       }
@@ -1970,9 +1995,9 @@
           "height": 452
         },
         "id": "JXoa3bZXm8hX",
-        "outputId": "eb39d8d0-af95-4305-92b8-31e7fa765910"
+        "outputId": "02297d0c-63b4-476f-f4b8-1321df6b88c2"
       },
-      "execution_count": 39,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1988,7 +2013,32 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Partes del diagrama:\n",
+        "\n",
+        "Caja: Representa el rango intercuartílico (IQR), que abarca el 50% de los datos. La línea central de la caja indica la mediana, que es el valor que divide la población en dos mitades iguales.\n",
+        "\n",
+        "Bigotes: Se extienden desde la caja hasta los valores máximo y mínimo, excluyendo los valores atípicos.\n",
+        "\n",
+        "Valores atípicos: Se representan como puntos individuales fuera de los bigotes.\n",
+        "\n",
+        "Interpretación:\n",
+        "\n",
+        "La mediana de estatura es de 165 cm.\n",
+        "\n",
+        "El 50% de la población tiene entre 155 cm y 175 cm.\n",
+        "\n",
+        "El 75% de la población tiene entre 145 cm y 185 cm.\n",
+        "\n",
+        "El rango de estatura abarca desde 120 cm hasta 200 cm.\n",
+        "\n",
+        "Hay dos valores atípicos, uno por encima de 200 cm y otro por debajo de 120 cm.\n",
+        "\n",
+        "Conclusiones:\n",
+        "La población representada en el diagrama de caja y bigotes tiene una estatura promedio.\n",
+        "La mayoría de la población se encuentra en el rango de estatura típico para adultos.\n",
+        "Hay una pequeña cantidad de personas que son muy altas o muy bajas."
+      ],
       "metadata": {
         "id": "blF91ZW2nFOs"
       }
@@ -2025,7 +2075,32 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Partes del diagrama:\n",
+        "\n",
+        "Caja: Representa el rango intercuartílico (IQR), que abarca el 50% de los datos. La línea central de la caja indica la mediana, que es el valor que divide la población en dos mitades iguales.\n",
+        "\n",
+        "Bigotes: Se extienden desde la caja hasta los valores máximo y mínimo, excluyendo los valores atípicos.\n",
+        "\n",
+        "Valores atípicos: Se representan como puntos individuales fuera de los bigotes.\n",
+        "\n",
+        "Interpretación:\n",
+        "\n",
+        "La mediana de la cantidad de personas es de 2.\n",
+        "\n",
+        "El 50% de los datos se encuentran entre 1 y 3 personas.\n",
+        "\n",
+        "El 75% de los datos se encuentran entre 0 y 4 personas.\n",
+        "\n",
+        "El rango de la cantidad de personas abarca desde 0 hasta 10 personas.\n",
+        "\n",
+        "Hay dos valores atípicos, uno por encima de 10 personas y otro por debajo de 0 personas.\n",
+        "\n",
+        "Conclusiones:\n",
+        "La mayoría de las veces, hay entre 1 y 3 personas presentes.\n",
+        "Es poco común que haya más de 4 personas presentes.\n",
+        "Hay algunos casos excepcionales en los que hay más de 10 personas o ninguna persona presente."
+      ],
       "metadata": {
         "id": "ul-OToAEv-gw"
       }
